# llm-power-profiler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: design.md  experiments.md  hpec-paper-plan.md  minimal-validation.md  roadmap.md  validation.md
examples/: mock_openai_server.py  openai-compatible-curl.md  traffic_generator.py  vllm.md
paper/: .gitignore  Makefile  README.md  main.tex  refs.bib
scripts/: collect_env.py  run_concurrency_sweep.py  run_mock_validation.py  run_overhead_validation.py  run_vllm_validation.py  summarize_reports.py
src/llm_power_profiler/: __init__.py  cli.py  doctor.py  export.py  nvml.py  proxy.py  stats.py  tui.py  usage.py
tests/: test_export.py  test_nvml.py  test_proxy_report.py  test_scripts.py  test_stats.py  test_usage.py
